@@ -289,7 +289,7 @@ error - Your ANSI C compiler should be defining __STDC__;
 
 #define NRSPELLPATHS	20
 
-#define NROFREALSPELLS	201	/* Number of different spells */
+#define NROFREALSPELLS	202	/* Number of different spells */
 
 #define NROFSKILLS  33  /* match to the number of elements in skills[] array */
 
