@@ -198,7 +198,7 @@ enum spellnrs {
   SP_FORKED_LIGHTNING,   SP_POISON_FOG,     SP_FLAME_AURA,            /* 195 */
   SP_VITRIOL,          SP_VITRIOL_SPLASH,
   
-  SP_IRONWOOD_SKIN
+  SP_IRONWOOD_SKIN,     SP_WRATHFUL_EYE                             /* 200 */
   
 };
 	
