@@ -48,6 +48,8 @@ more
   arch god_spelldirect_sunspear
   more
   arch god_spelldirect_daylight
+  more
+  arch god_spelldirect_wrathful_eye
 end
 #############################################################
 # Gorokh - Demon King, Duke of Hell, Temptor and Tormentor
