@@ -16,6 +16,7 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 CVS changes since last release:
+PeterM 2001/01/08:  Wrathful Eye spell implemented.
 
 MSW 2000/12/26:
 Checkin of Jan's new god intervention code.  I haven't played around with
